added voting v1 modified ini script for deleting all data

--- a/src/static/partials/attraction.html
+++ b/src/static/partials/attraction.html
@@ -18,15 +18,15 @@
 
 </div>
 <div class="vote">
-  <div class="count">{{item.numVotes}}</div>
-  <button class="voteButton" ng-class="item.voteClass" ng-show="item.canVote">
-    Vote
+  <div class="count">{{item.numVotesWantToGo}}</div>
+  <button class="voteButton" ng-class="item.voteClass" ng-show="item.canVoteWantToGo">
+    I've been here
   </button>
 </div>
 <div class="vote">
-  <div class="count">{{item.numVotes}}</div>
-  <button class="voteButton" ng-class="item.voteClass" ng-show="item.canVote">
-    Vote
+  <div class="count">{{item.numVotesBeenThere}}</div>
+  <button class="voteButton" ng-class="item.voteClass" ng-show="item.canVoteBeenThere">
+    I want to go here
   </button>
 </div>
 </span>
