--- a/src/templates/attraction.html
+++ b/src/templates/attraction.html
@@ -1,5 +1,15 @@
-<h1 itemprop="name">{{name}}</h1>
-<img itemprop="image" src="{{imageUrl}}" />
-<p itemprop="description">{{description}}</p>
-
+<!DOCTYPE html>
+<html>
+<head>
+  <script type="text/javascript">
+    window.location.href = '{{redirectUrl}}';
+  </script>
+  <title>{{name}}</title>
+</head>
+<body itemscope itemtype="http://schema.org/Thing">
+  <h1 itemprop="name">{{name}}</h1>
+  <img itemprop="image" src="{{imageUrl}}" />
+  <p itemprop="description">{{description}}</p>
+</body>
+</html>
 
