added new mapping

--- a/src/static/partials/attraction_new.html
+++ b/src/static/partials/attraction_new.html
@@ -44,7 +44,7 @@
                         <span class="kno-fv">{{item.address}}</span>
                     </div>
                     <div class="kno-f ">
-                        <span class="kno-fh">Free admission time: </span>
+                        <span class="kno-fh">Free admission: </span>
                         <span class="kno-fv">{{item.freeTime}} {{item.donation}}</span>
                     </div>
                     <div class="kno-f ">
@@ -57,7 +57,6 @@
             <div class="kno-card">
              <div class="toolbar">
                   <button class="button">Promote</button>
-
              </div>
 
                  <div class="vote">
