--- a/src/static/partials/attraction_new.html
+++ b/src/static/partials/attraction_new.html
@@ -54,51 +54,50 @@
                 </div>
             </div>
 
+
             <div class="kno-card">
-             <div class="toolbar">
-                  <button class="button">Promote</button>
-             </div>
 
-                 <div class="vote">
+                 <div id="beenhere-share" class="beenhere vote">
                   <div class="count">{{item.numVotesWantToGo}}</div>
-                  <button class="voteButton voteButtonWantToGo" ng-class="item.voteClass" ng-show="item.canVoteWantToGo">
-                    I've been here
+                  <button class="beenhere-label voteButton voteButtonWantToGo" ng-class="item.voteClass" ng-show="item.canVoteWantToGo">
+                    Been here
                   </button>
                 </div>
 
-                 <div class="vote">
+                 <div id="wanttogo-share" class="wanttogo vote">
                   <div class="count">{{item.numVotesBeenThere}}</div>
-                  <button class="voteButton voteButtonBeenThere" ng-class="item.voteClass" ng-show="item.canVoteBeenThere">
-                    I want to go here
+                  <button class="wanttogo-label voteButton voteButtonBeenThere" ng-class="item.voteClass" ng-show="item.canVoteBeenThere">
+                    Want to go
                   </button>
                 </div>
-
-
             </div>
 
 
-                 <div id="sharebar" class="container_12">
+            <div id="sharebar" class="kno-card container_12">
 
-        <a id="googleplus-share" class="googleplus" href="#" onclick="javascript:void window.open('http://www.facebook.com/sharer/sharer.php?u=http://giphy.com/gifs/z91tFIwWZOJq0','1361370515039','width=650,height=280,toolbar=0,menubar=0,location=0,status=0,scrollbars=0,resizable=1,left=0,top=0');return false;" target="_blank">
-            <img class="googleplus-icon" src="http://giphy.com/static/img/facebook.png">
+        <a id="googleplus-share" class="googleplus" href="#" target="_blank">
+            <img class="googleplus-icon" src="/img/facebook.png">
         </a>
-        <a id="facebook-share" class="facebook" href="#" onclick="javascript:void window.open('http://www.facebook.com/sharer/sharer.php?u=http://giphy.com/gifs/z91tFIwWZOJq0','1361370515039','width=650,height=280,toolbar=0,menubar=0,location=0,status=0,scrollbars=0,resizable=1,left=0,top=0');return false;" target="_blank">
-            <img class="facebook-icon" src="http://giphy.com/static/img/facebook.png">
+        <a id="facebook-share" class="facebook" href="#" onclick="javascript:void window.open('http://www.facebook.com/sharer/sharer.php?u={{item.attractionContentUrl}}','1361370515039','width=650,height=280,toolbar=0,menubar=0,location=0,status=0,scrollbars=0,resizable=1,left=0,top=0');return false;" target="_blank">
+            <img class="facebook-icon" src="/img/facebook.png">
         </a>
-        <a id="twitter-share" class="twitter" href="#" onclick="javascript:void window.open('http://twitter.com/share?url=http://giphy.com/gifs/z91tFIwWZOJq0?tc=1&amp;via=giphy','1361370074860','width=500,height=252,toolbar=0,menubar=0,location=0,status=1,scrollbars=0,resizable=1,left=0,top=0');return false;" target="_blank">
-            <img class="twitter-icon" src="http://giphy.com//static/img/twitter.png">
+        <a id="twitter-share" class="twitter" href="#" onclick="javascript:void window.open('http://twitter.com/share?url={{item.attractionContentUrl}}','1361370074860','width=500,height=252,toolbar=0,menubar=0,location=0,status=1,scrollbars=0,resizable=1,left=0,top=0');return false;" target="_blank">
+            <img class="twitter-icon" src="/img/twitter.png">
         </a>
-        <a id="pinterest-share" class="pinterest" href="#" onclick="javascript:void window.open('http://twitter.com/share?url=http://giphy.com/gifs/z91tFIwWZOJq0?tc=1&amp;via=giphy','1361370074860','width=500,height=252,toolbar=0,menubar=0,location=0,status=1,scrollbars=0,resizable=1,left=0,top=0');return false;" target="_blank">
-            <img class="pinterest-icon" src="http://giphy.com//static/img/twitter.png">
+        <a id="pinterest-share" class="pinterest" href="#" onclick="javascript:void window.open('http://twitter.com/share?url={{item.attractionContentUrl}}','1361370074860','width=500,height=252,toolbar=0,menubar=0,location=0,status=1,scrollbars=0,resizable=1,left=0,top=0');return false;" target="_blank">
+            <img class="pinterest-icon" src="/img/twitter.png">
         </a>
-        <a id="beenhere-share" class="beenhere" href="#" target="_blank">
-            <img class="beenhere-icon" src="http://giphy.com//static/img/tumblr.png">
+        <!-- a id="beenhere-share" class="beenhere" href="#" target="_blank">
+            <img class="beenhere-icon" src="/img/tumblr.png">
             <span class="beenhere-label">Been here</span>
         </a>
         <a id="wanttogo-share" class="wanttogo" href="#" target="_blank">
-            <img class="wanttogo-icon" src="http://giphy.com//static/img/tumblr.png">
+            <img class="wanttogo-icon" src="/img/tumblr.png">
             <span class="wanttogo-label">Want to go</span>
-        </a>
+        </a -->
+
+
+
     </div>
 
 
