fixed unicode problems with template

--- a/src/static/partials/attraction_new.html
+++ b/src/static/partials/attraction_new.html
@@ -52,6 +52,7 @@
                         <span class="kno-fv"><a href="{{item.website}}" target="_blank" >{{item.website | domain}}</a></span>
                     </div>
                 </div>
+            <a href="{{item.attractionContentUrl}}" title="permalink">#</a>
             </div>
 
 
