--- a/src/static/partials/attraction_new.html
+++ b/src/static/partials/attraction_new.html
@@ -65,7 +65,7 @@
               </span>
 
             <a id="facebook-share" class="facebook" href="#" onclick="javascript:void window.open('http://www.facebook.com/sharer/sharer.php?u={{item.attractionContentUrl}}','1361370515039','width=650,height=280,toolbar=0,menubar=0,location=0,status=0,scrollbars=0,resizable=1,left=0,top=0');return false;" target="_blank"><img class="facebook-icon" src="/img/fbshare_button.png"></a>
-            <a id="twitter-share" class="twitter" href="#" onclick="javascript:void window.open('http://twitter.com/share?text=' + encodeURIComponent('Having fun doesn’t require a lot of money! {{item.attractionContentUrl}} is just one of many hundreds of affordable attractions to explore. See documentation for details.') ,'1361370074860','width=500,height=252,toolbar=0,menubar=0,location=0,status=1,scrollbars=0,resizable=1,left=0,top=0');return false;" target="_blank"><img class="twitter-icon" src="/img/tweet_button.png"></a>
+            <a id="twitter-share" class="twitter" href="#" onclick="javascript:void window.open('http://twitter.com/share?text=' + encodeURIComponent('Having fun doesn’t require a lot of money! {{item.attractionContentUrl}} is just one of many hundreds of affordable attractions to explore.') ,'1361370074860','width=500,height=252,toolbar=0,menubar=0,location=0,status=1,scrollbars=0,resizable=1,left=0,top=0');return false;" target="_blank"><img class="twitter-icon" src="/img/tweet_button.png"></a>
 
               <span id="beenhere-share" class="googleplus-share beenhere vote beenhere-label voteButton voteButtonWantToGo" ng-class="item.voteClass" ng-show="item.canVoteWantToGo">
                   <span class="icon">{{item.numVotesWantToGo}}</span>
