fixed info window added no entries text added about

--- a/src/static/css/affordableculture.css
+++ b/src/static/css/affordableculture.css
@@ -967,3 +967,8 @@ border-color: #333333;
   #facebook-share img, #twitter-share img {
       margin-top: -3px;
   }
+
+ #myModal .modal-dialog {
+
+     width: 832px;
+ }
