--- a/src/static/partials/attraction_new.html
+++ b/src/static/partials/attraction_new.html
@@ -68,12 +68,12 @@
             <a id="twitter-share" class="twitter" href="#" onclick="javascript:void window.open('http://twitter.com/share?text=' + encodeURIComponent('Having fun doesn’t require a lot of money! {{item.attractionContentUrl}} is just one of many hundreds of affordable attractions to explore.') ,'1361370074860','width=500,height=252,toolbar=0,menubar=0,location=0,status=1,scrollbars=0,resizable=1,left=0,top=0');return false;" target="_blank"><img class="twitter-icon" src="/img/tweet_button.png"></a>
 
 
-              <span id="wanttogo-share" class="googleplus-share wanttogo vote wanttogo-label voteButton voteButtonBeenThere" ng-class="item.voteClass" ng-show="item.canVoteBeenThere">
+              <span id="wanttogo-share" class="googleplus-share wanttogo vote wanttogo-label voteButton voteButtonBeenThere" ng-class="item.voteClass" ngshow="item.canVoteBeenThere">
                   <span class="icon">{{item.numVotesBeenThere}}</span>
                   <span class="glabel">Been here</span>
               </span>
 
-              <span id="beenhere-share" class="googleplus-share beenhere vote beenhere-label voteButton voteButtonWantToGo" ng-class="item.voteClass" ng-show="item.canVoteWantToGo">
+              <span id="beenhere-share" class="googleplus-share beenhere vote beenhere-label voteButton voteButtonWantToGo" ng-class="item.voteClass" ngshow="item.canVoteWantToGo">
                   <span class="icon">{{item.numVotesWantToGo}}</span>
                   <span class="glabel">Want to go</span>
               </span>
