--- a/src/static/css/affordableCulture.css
+++ b/src/static/css/affordableCulture.css
@@ -820,6 +820,7 @@ body {
 .navbar-brand {
     font-family: 'Roboto', sans-serif;
     color: #ebebeb !important;
+    cursor: pointer;
 }
 
 #profileInfo {
@@ -994,4 +995,22 @@ body {
     font-family: 'Segoe UI', 'Arial', sans-serif;
     margin-top: 5px;
     margin-bottom: 5px;
+}
+
+nav button.close {
+    position: absolute;
+    top: 15px;
+    left: 350px;
+    width: 11px;
+    height: 21px;
+}
+
+nav div.loading {
+    position: absolute;
+    top: 10px;
+    right: 200px;
+
+    width: 32px;
+    height: 32px;
+    background-image: url('/images/loading3.gif');
 }
